--- a/package.json
+++ b/package.json
@@ -22,14 +22,17 @@
     "@nextui-org/theme": "2.1.17",
     "@react-aria/ssr": "^3.8.0",
     "@react-aria/visually-hidden": "^3.8.6",
+    "@supabase/supabase-js": "^2.39.7",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.16",
+    "axios": "^1.6.7",
     "clsx": "^2.0.0",
     "eslint": "8.48.0",
     "eslint-config-next": "14.0.2",
     "framer-motion": "^10.16.4",
+    "install": "^0.13.0",
     "intl-messageformat": "^10.5.0",
     "next": "14.0.2",
     "next-themes": "^0.2.1",
