--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nextui-org/theme": "2.1.17",
     "@react-aria/ssr": "^3.8.0",
     "@react-aria/visually-hidden": "^3.8.6",
+    "@supabase/storage-js": "^2.5.5",
     "@supabase/supabase-js": "^2.39.7",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
