--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nextui-org/link": "2.0.26",
     "@nextui-org/navbar": "2.0.27",
     "@nextui-org/react": "^2.2.9",
+    "@nextui-org/shared-icons": "^2.0.7",
     "@nextui-org/snippet": "2.0.30",
     "@nextui-org/switch": "2.0.25",
     "@nextui-org/system": "2.0.15",
@@ -35,6 +36,7 @@
     "framer-motion": "^10.16.4",
     "install": "^0.13.0",
     "intl-messageformat": "^10.5.0",
+    "md5": "^2.3.0",
     "next": "14.0.2",
     "next-themes": "^0.2.1",
     "postcss": "8.4.31",
@@ -45,5 +47,8 @@
     "tailwind-variants": "^0.1.18",
     "tailwindcss": "3.3.5",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/md5": "^2.3.5"
   }
 }
