--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "next-app-template",
-  "version": "0.0.1",
+  "name": "nili",
+  "version": "0.8",
   "private": true,
   "scripts": {
     "dev": "next dev",
