--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.0.1",
     "react-player": "^2.16.0",
+    "sharp": "^0.33.3",
     "tailwind-variants": "^0.1.18",
     "tailwindcss": "3.3.5",
     "typescript": "5.0.4"
