--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.3.6",
+    "@nextui-org/shared-icons": "^2.0.7",
     "@react-aria/ssr": "^3.9.3",
     "@react-aria/visually-hidden": "^3.8.11",
     "@supabase/storage-js": "^2.5.5",
@@ -24,7 +25,7 @@
     "eslint-config-next": "14.0.2",
     "framer-motion": "^10.18.0",
     "install": "^0.13.0",
-    "intl-messageformat": "^10.5.13",
+    "intl-messageformat": "^10.5.12",
     "md5": "^2.3.0",
     "next": "14.0.2",
     "next-themes": "^0.2.1",
