--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@vercel/analytics": "^1.3.1",
     "autoprefixer": "10.4.16",
     "axios": "^1.6.8",
     "clsx": "^2.1.1",
@@ -37,7 +38,7 @@
     "react-player": "^2.16.0",
     "sharp": "0.33.1",
     "tailwind-variants": "^0.1.20",
-    "tailwindcss": "3.3.5",
+    "tailwindcss": "3.4.12",
     "typescript": "5.0.4"
   },
   "devDependencies": {
